# CAnalysis

./: .gitignore  CMakeLists.txt  build.sh  function.json
examples/: call_graph.c  call_graph_diff.c  function_list.c  qsort_1.c  qsort_2.c  redefination_func.c  same_arg.c  stmt.c
grammers/: MiniC.g4
src/: CodeDiffer.h  CompUnit.cpp  CompUnit.h  FuncDetector.h  GraphMatrix.h  LCS.h  MiniCTypeVisitor.h  PreAnalyzer.cpp  PreAnalyzer.h  SecAnalyzer.cpp  SecAnalyzer.h  main.cpp
third/: json.hpp
